--- a/style.css
+++ b/style.css
@@ -1,136 +1,38 @@
-html{
-    width: 100%;
-    height: 100%;
-    font-family:'Poppins', sans-serif;
+*{
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    --color_nau: rgb(94 66 66);
+    user-select: none;
 }
-body{
+html{
+    padding: 0;
+    margin: 0;
+    font-family: 'Open Sans', sans-serif;
     width: 100%;
     height: 100%;
+
+}
+body,
+.web{
+    width: 100%;
+    height: 100%;
+    background-color: #4d4d4d;
+    text-align: center;
 }
 .web{
-    position: relative;
-    width: 100%;
-    height: 100%;
+    overflow-y: scroll;
+    max-height: 100%;
 }
-.grid_container{
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%,-50%);
-    width: 100%;
-    display: grid;
-    grid-template-columns:1fr 1fr 1fr 1fr;
-    grid-row-gap: 0px;
-    grid-column-gap: 20px;
-align-items: center;
-    max-width: 1200px;
-    min-height: 440px;
-    padding: 0px 5px;
-    border-radius: 7px;
+.web::-webkit-scrollbar{
+    width: 0px;
 }
-.grid_container>div{
-    height: 200px;
-    border-radius:7px;
-    display: inline-block;
-margin: 0px 10px;
-overflow: hidden;
 
-}
-.grid_container>div>img{
-    width: 100%;
-    max-width: 100%;
-    height: 100%;
-    border-radius:7px;
-    object-fit: cover;
-    overflow: hidden;
-}
-@media only screen and (max-width:1000px){
-  .grid_container{
-    grid-column-gap: 10px;
-  } 
-  .grid_container>div{
-      margin: 0px 5px;
-  }
-}
-@media only screen and (max-width:666px){
-  .grid_container{
-      transform: translate(0);
-      left: 0;
-      top: 0;
-    grid-template-columns:1fr 1fr 1fr;
-    grid-row-gap: 20px;
-    padding:10px 5px ;
-    grid-column-gap:60px;
-}
-    .grid_container>div{
-        max-width: calc(100% - 0px);
-    }
-    .grid_container>div:last-child{
-        grid-column: 3/4;
-    }
-  }
 
-  .grid_container>div>img{
-      transition: all 0.2s;
-      
-  }
-  /* .grid_container>div:hover{
+.main_canvas{
+border: solid 1px black;
+display: block;
+width: 100%;
+margin: 0 auto;
+}
 
-  } */
-  .grid_container>div>img:hover{
-    transform: scale(1.2);
-  }
-  /*
-  */
-  .shadow{
-      background-color:rgba(0, 0, 0, 0.8);
-      position: fixed;
-      top: 0;
-      right: 0;
-      left: 0;
-      bottom: 0;
-  }
-  .check_picture{
-    user-select: none;
-    position: fixed;
-   
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-    z-index: 2;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-
-  .check_picture i{
-      font-size: 50px;
-      color: white;
-      margin: 0px 5px;
-      cursor: pointer;
-  }
-  img[class^="main_check"]{
-    width:67.6%;
-    height:70%;
-   object-fit: cover;
-background-color: silver;
-  }
-  .close{
-      position: fixed;
-      right: 40px;
-      top: 10px;
-      font-size: 4rem;
-      color: white;
-      cursor: pointer;
-      z-index: 3;
-  }
-  .none{
-      display: none !important;
-  }
-  .notopen{
-      width:31.2px;
-      height: 50px;
-      margin:0px 5px;
-      opacity: 0;
-  }
